--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,7 +1,31 @@
 version: 2
 updates:
-- package-ecosystem: pip
-  directory: "/"
-  schedule:
-    interval: daily
-  open-pull-requests-limit: 10
+
+  - package-ecosystem: "pip"
+    directory: "/"
+    schedule:
+      interval: "daily"
+    target-branch: develop
+    reviewers:
+      - turnrdev
+    assignees:
+      - turnrdev
+    commit-message:
+      prefix: "deps: "
+    labels:
+      - "dependencies"
+      - "pip"
+
+  - package-ecosystem: "github-actions"
+    directory: "/"
+    schedule:
+      interval: "daily"
+    target-branch: develop
+    reviewers:
+      - turnrdev
+    assignees:
+      - turnrdev
+    commit-message:
+      prefix: "chore: "
+    labels:
+      - "dependencies"
