--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Python package
+name: Test Library
 
 on:
   push:
@@ -23,8 +23,7 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
-      run: |
-        python -m pip install -U pip flake8
+      run: python -m pip install -U pip flake8
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
@@ -49,8 +48,7 @@ jobs:
         python -m pip install -U pip black
         pip install -r requirements.txt
     - name: Style with black
-      run: |
-        black -l 99 --check --diff  --color .
+      run: black -l 99 --check --diff  --color .
 
   test:
     needs: lint
@@ -69,9 +67,6 @@ jobs:
       run: |
         python -m pip install -U pip pytest setuptools
         pip install -r requirements.txt
-    - name: Install
-      run: |
-        python setup.py install
     - name: Test with pytest
       run: |
         echo "There are no tests yet."
@@ -91,8 +86,6 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
-      run: |
-        python -m pip install -U pip setuptools wheel
+      run: python -m pip install -U pip setuptools wheel
     - name: Build
-      run: |
-        python setup.py sdist bdist_wheel
+      run: python setup.py sdist bdist_wheel
