--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [metadata]
 name = trainerdex
 version = attr: trainerdex.__version__
-url = https://www.trainerdex.co.uk/
+url = https://trainerdex.app/
 author = TurnrDev
-author_email = jay@trainerdex.co.uk
+author_email = jay@trainerdex.app
 description = An API to interact with TrainerDex - a online database of Pokemon Go trainers
 long_description = file: README.md
 license = GPL-3.0
