--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,3 @@
-# Made to match Redbot since this project uses redbot
-# Probably don't need all of these excludes
-
 [tool.black]
     line-length = 99
     target-version = ['py38']
@@ -19,3 +16,39 @@
         | dist
     )/
     '''
+
+[tool.poetry]
+name = "TrainerDex"
+version = "4.0.0a0"
+description = "An API to interact with TrainerDex - a online database of Pokemon Go trainers"
+authors = ["Jay Turner <jay@trainerdex.app>"]
+license = "GPL-3.0"
+readme = "README.md"
+classifiers = [
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3 :: Only",
+    "Programming Language :: Python :: 3.7",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+]
+homepage = "https://trainerdex.app/"
+repository = "https://github.com/TrainerDex/TrainerDex.py"
+
+[tool.poetry.dependencies]
+python = "^3.7"
+aiohttp = "^3.6.0"
+python-dateutil = "^2.8.1"
+
+[tool.poetry.dev-dependencies]
+black = "^22.1.0"
+isort = {extras = ["black"], version = "^5.10.1"}
+flake8 = "^4.0.1"
+
+[build-system]
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
