--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ repository = "https://github.com/TrainerDex/TrainerDex.py"
 python = "^3.7"
 aiohttp = "^3.6.0"
 python-dateutil = "^2.8.1"
+promise = "^2.3"
 
 [tool.poetry.dev-dependencies]
 black = "^22.1.0"
