--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,9 +41,10 @@ repository = "https://github.com/TrainerDex/TrainerDex.py"
 
 [tool.poetry.dependencies]
 python = "^3.8"
-aiohttp = "^3.6.0"
+aiohttp = ">=3.8"
 python-dateutil = "^2.8.1"
 promise = "^2.3"
+ujson = "^5.3.0"
 
 [tool.poetry.dev-dependencies]
 black = "^22.1.0"
