--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,10 +30,11 @@ aiohttp = "^3.6.0"
 python-dateutil = "^2.8.1"
 typing-extensions = "^4.3.0"
 
-[tool.poetry.dev-dependencies]
-black = "^22.1.0"
-isort = {extras = ["black"], version = "^5.10.1"}
+[tool.poetry.group.dev.dependencies]
+black = "^22.8.0"
+isort = "^5.10.1"
 flake8 = "^5.0.4"
+pre-commit = "^2.20.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
